--- a/help-projects/Mary/CourseWork-Atelie/CourseWork-Atelie/CourseWork-Atelie.csproj
+++ b/help-projects/Mary/CourseWork-Atelie/CourseWork-Atelie/CourseWork-Atelie.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Networking\ManufacturerNetworkProxy.cs" />
     <Compile Include="Networking\Shared\NetworkRequestInterface.cs" />
     <Compile Include="Networking\Shared\SQLDatabaseConnetion.cs" />
     <Compile Include="Networking\ModelNetworkProxy.cs" />
