--- a/help-projects/Mary/CourseWork-Atelie/CourseWork-Atelie/CourseWork-Atelie.csproj
+++ b/help-projects/Mary/CourseWork-Atelie/CourseWork-Atelie/CourseWork-Atelie.csproj
@@ -117,6 +117,8 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
