--- a/help-projects/Mary/CourseWork-Atelie/CourseWork-Atelie/CourseWork-Atelie.csproj
+++ b/help-projects/Mary/CourseWork-Atelie/CourseWork-Atelie/CourseWork-Atelie.csproj
@@ -62,12 +62,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExtensionMethods\StringExtension.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="AuthorizationForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="AuthorizationForm.Designer.cs">
+      <DependentUpon>AuthorizationForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\AuthorizationFormModel.cs" />
+    <Compile Include="Models\Shared\BaseModel.cs" />
     <Compile Include="Networking\MultipleDependable\BookingNetworkProxy.cs" />
     <Compile Include="Networking\MultipleDependable\FittingNetworkProxy.cs" />
     <Compile Include="Networking\Shared\RequestConsts.cs" />
@@ -82,8 +84,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AuthorizationService.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="AuthorizationForm.resx">
+      <DependentUpon>AuthorizationForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
