--- a/help-projects/Mary/CourseWork-Atelie/CourseWork-Atelie/CourseWork-Atelie.csproj
+++ b/help-projects/Mary/CourseWork-Atelie/CourseWork-Atelie/CourseWork-Atelie.csproj
@@ -68,6 +68,12 @@
     <Compile Include="Forms\FabricSelectionForm.Designer.cs">
       <DependentUpon>FabricSelectionForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\SummaryForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\SummaryForm.Designer.cs">
+      <DependentUpon>SummaryForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\ModelSelectionForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,6 +95,7 @@
     <Compile Include="Models\AuthorizationFormModel.cs" />
     <Compile Include="Models\FabricSelectionModel.cs" />
     <Compile Include="Models\ModelSelectionModel.cs" />
+    <Compile Include="Models\SummaryModel.cs" />
     <Compile Include="Models\UserRegistratioModel.cs" />
     <Compile Include="Models\Shared\BaseModel.cs" />
     <Compile Include="Networking\MultipleDependable\BookingNetworkProxy.cs" />
@@ -105,11 +112,15 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AuthorizationService.cs" />
+    <Compile Include="Services\IdBuilderService.cs" />
     <EmbeddedResource Include="Forms\FabricSelectionForm.resx">
       <DependentUpon>FabricSelectionForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ModelSelectionForm.resx">
       <DependentUpon>ModelSelectionForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\SummaryForm.resx">
+      <DependentUpon>SummaryForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\UserRegistrationForm.resx">
       <DependentUpon>UserRegistrationForm.cs</DependentUpon>
