--- a/help-projects/Mary/CourseWork-Atelie/CourseWork-Atelie/CourseWork-Atelie.csproj
+++ b/help-projects/Mary/CourseWork-Atelie/CourseWork-Atelie/CourseWork-Atelie.csproj
@@ -68,6 +68,18 @@
     <Compile Include="Forms\FabricSelectionForm.Designer.cs">
       <DependentUpon>FabricSelectionForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\AnalyticsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AnalyticsForm.Designer.cs">
+      <DependentUpon>AnalyticsForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\ManagerOperationForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ManagerOperationForm.Designer.cs">
+      <DependentUpon>ManagerOperationForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\SummaryForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -113,8 +125,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AuthorizationService.cs" />
     <Compile Include="Services\IdBuilderService.cs" />
+    <EmbeddedResource Include="Forms\AnalyticsForm.resx">
+      <DependentUpon>AnalyticsForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\FabricSelectionForm.resx">
       <DependentUpon>FabricSelectionForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ManagerOperationForm.resx">
+      <DependentUpon>ManagerOperationForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ModelSelectionForm.resx">
       <DependentUpon>ModelSelectionForm.cs</DependentUpon>
