--- a/help-projects/Mary/CourseWork-Atelie/CourseWork-Atelie/CourseWork-Atelie.csproj
+++ b/help-projects/Mary/CourseWork-Atelie/CourseWork-Atelie/CourseWork-Atelie.csproj
@@ -92,6 +92,12 @@
     <Compile Include="Forms\AddFittingForm.Designer.cs">
       <DependentUpon>AddFittingForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\GetInfoForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\GetInfoForm.Designer.cs">
+      <DependentUpon>GetInfoForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\ManagerOperationForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -128,6 +134,7 @@
     <Compile Include="Models\DeleteFittingModel.cs" />
     <Compile Include="Models\FabricSelectionModel.cs" />
     <Compile Include="Models\FittingOperationsModel.cs" />
+    <Compile Include="Models\GetInfoModel.cs" />
     <Compile Include="Models\ModelSelectionModel.cs" />
     <Compile Include="Models\SummaryModel.cs" />
     <Compile Include="Models\UserRegistratioModel.cs" />
@@ -161,6 +168,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\AddFittingForm.resx">
       <DependentUpon>AddFittingForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\GetInfoForm.resx">
+      <DependentUpon>GetInfoForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ManagerOperationForm.resx">
       <DependentUpon>ManagerOperationForm.cs</DependentUpon>
