--- a/net-subject/CourseWork-BusSchedule/CourseWork-BusSchedule.csproj
+++ b/net-subject/CourseWork-BusSchedule/CourseWork-BusSchedule.csproj
@@ -46,12 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Extensions\WordFormattingExtension.cs" />
+    <Compile Include="Models\BaseModel.cs" />
+    <Compile Include="Models\RegistrationModel.cs" />
     <Compile Include="Networking\DatabaseConnection.cs" />
     <Compile Include="Networking\Models\BusProxy.cs" />
     <Compile Include="Networking\Models\CredentialsInfoProxy.cs" />
@@ -61,6 +58,13 @@
     <Compile Include="Networking\RequestConsts.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CredentialsManagerService.cs" />
+    <Compile Include="Views\Registration\RegistrationForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Registration\RegistrationForm.Designer.cs">
+      <DependentUpon>RegistrationForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -70,6 +74,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Views\Registration\RegistrationForm.resx">
+      <DependentUpon>RegistrationForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
