--- a/net-subject/CourseWork-BusSchedule/CourseWork-BusSchedule.csproj
+++ b/net-subject/CourseWork-BusSchedule/CourseWork-BusSchedule.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Builders\UserBuilder.cs" />
     <Compile Include="Extensions\WordFormattingExtension.cs" />
+    <Compile Include="Models\AdminOperationsModel.cs" />
     <Compile Include="Models\BaseModel.cs" />
     <Compile Include="Models\DetailsModel.cs" />
     <Compile Include="Models\RegistrationModel.cs" />
@@ -61,6 +62,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CredentialsManagerService.cs" />
+    <Compile Include="Views\AdminFlow\AdminOperationsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\AdminFlow\AdminOperationsForm.Designer.cs">
+      <DependentUpon>AdminOperationsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\Registration\RegistrationForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,6 +89,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Views\AdminFlow\AdminOperationsForm.resx">
+      <DependentUpon>AdminOperationsForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\Registration\RegistrationForm.resx">
       <DependentUpon>RegistrationForm.cs</DependentUpon>
     </EmbeddedResource>
